# dotfiles

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .stylua.toml  AGENTS-ja.md  AGENTS.md  LICENSE  Makefile  README-ja.md  README.md  mise.toml  pyproject.toml  starship.toml
ai/codex/: config.toml
ai/instructions/: AGENTS-ja.md  AGENTS.md
apm/: apm.lock.yaml  apm.yml  config.json
bun/: bun.lockb  bunfig.toml  package.json
codex/: config.toml
docs/: abbreviation-policy.md  ai-skills.md  ai-tools.md  architecture.md  command-model.md  index.md  operations.md
ghostty/: config  config.ghostty
git/: .gitconfig
homebrew/: Brewfile
lazygit/: config.yml
mise/: config.global.toml  config.toml  mise.global.toml  mise.local.toml
mise/conf.d/: env.toml  tools.toml
mise/tasks/: brew-sync  bun-sync  install  install-bun  mise-sync-global-tools  source
nvim/: init.lua  lazy-lock.json
nvim/lua/: keybinds-policy.md  keymaps.lua  options.lua
procs/: procs.toml
scripts/: install-bun.sh  install-pre-commit.sh  install-zshrc.sh  install.sh  link-dotfiles.sh  relink-dotfiles.sh  source-zshrc.sh  source.sh  sync-local-commands.sh  update-mise-global-tools.sh
scripts/global/: add-worktree-remote.sh  add-worktree.sh  delete-worktree.sh  reveal-process-cpu.sh  reveal-process-memory.sh  reveal-process.sh  reveal-repository-with-browser.sh  search-google.sh  (+14 more)
sheldon/: abbreviations  plugins.toml
terminal/: .zlogin  .zlogout  .zprofile  .zshenv  .zshrc
vscode/: keybindings.jsonc  settings.jsonc
wezterm/: keybindings.lua  wezterm.lua
zellij/: config.kdl
(+210 files in other folders)
